--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,6 @@ body {
   font-family: 'Lexend Deca', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-image: url(./images/background.png);
-  background-repeat: no-repeat;
-  background-size: 100% 100vh;
-  background-attachment: fixed;
-  background-position: center;
-  background-color: rgb(41, 41, 41); */
-  /* background-color: rgb(133, 27, 237); */
 }
 
 /* doing this makes it look better on iOS safari for some reason */
